2003-07-05  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add openbsd flags like freebsd.

	* Documentation/Gui/DefaultsSummary.gsdoc: Move backend defaults
	to back/Documentation/Back/DefaultsSummary.gsdoc.

2003-07-05 18:02  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m
	(-textStorage:edited:range:changeInLength:invalidatedRange:): Improve
	behavior of the adjustments to the selected range.

2003-07-05 17:20  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSAttributedString.m (-fixParagraphStyleAttributeInRange:):
	Handle paragraphs with a paragraph style set for a part of it but
	not the first character correctly.

	* Source/NSFont.m (getNSFont): Retain/autorelease when returning a
	cached instance to make the retain status of the instance correct.

2003-07-05 16:07  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFont.m (-initWithCoder:): Make sure that the returned
	font has a correct retain count on all paths.

2003-07-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPasteboard.m: Add code to set protocols for proxy objects.
	and dum my class implementations to let protocols work with old
	compilers.
	* Headers/AppKit/GSPasteboard.h: Add missing method of owner.

2003-07-03 01:43  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFont.m (getNSFont): Only update the cache when the font
	has the default size.

2003-07-02 16:38  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSFont.m: (Mostly) rewrite handling of standard fonts to
	provide better behavior, especially when only some fonts are set in
	the defaults. Updated documentation.

2003-07-01 Serg Stoyan <stoyan@hologr.com>

	* Source/NSBrowser.m (_createColumn):
	Set border type of column's scroll view according to 
	_separateColumns flag.
	
2003-06-29 20:15  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWorkspace.m (-launchApplication:showIcon:autolaunch:):
	Add a missing '@'.
